fix tooling tests