@@ -17,6 +17,7 @@
         <!-- Add visibility required by the tests exclusively -->
         <surefire.args>
             -XX:+IgnoreUnrecognizedVMOptions
+            --add-modules=net.bytebuddy.agent
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.config.builders=ALL-UNNAMED
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.context=ALL-UNNAMED
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.registry=ALL-UNNAMED
@@ -88,6 +89,15 @@
             <artifactId>mule-tests-allure</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
         </dependency>
     </dependencies>
 
